tests/arch/riscv/error/executor/test_riscv_error_executor_005.s

#
# Creator (https://creatorsim.github.io/creator/)
#

.text
main:
	
    li t0, 10
	sw t0, 0(zero)